# opengl_study

./: .gitignore
libs/: glew32.exp  glew32.lib  glew32s.lib  glfw3dll.exp
libs/glad/include/glad/: glad.h
publibs/libglfw/lib/: glfw3.lib
publibs/libglfw/lib/pkgconfig/: glfw3.pc
test/glad/src/: glad.c
test/opengl_hello/: CMakeLists.txt  Untitled-1.cpp  hello_triangle.cpp  hello_triangle_juxing.cpp  main.cpp  openg_player_main.cpp  opengl_player.cpp  opengl_player.h  openl_yuv.cpp  test_lib_config.cpp  yuv-player.cpp
test/qt_opengl_player/: CMakeLists.txt  D3D9TextureRender.cpp  D3D9TextureRender.h  DecodeAV.cpp  DecodeAV.h  Direct3D9Render.cpp  Direct3D9Render.h  d3d9YUVTexture.cpp  d3dUtility.cpp  d3dUtility.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
test/test_opengl/: CMakeLists.txt  XVideoWidget.cpp  XVideoWidget.h  decodeAV.cpp  decodeAV.h  depends.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
test/xplayer/: CMakeLists.txt  XOpenGlWidget.cpp  XOpenGlWidget.h  decodeAV.cpp  decodeAV.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
